--- a/notebooks/2c Input-driven linear model (LM-HMM).ipynb
+++ b/notebooks/2c Input-driven linear model (LM-HMM).ipynb
@@ -10,6 +10,8 @@
     "\n",
     "*This notebook demonstrates the model published in [(Cazettes et al., Nat. Neuro. 2023)](https://www.biorxiv.org/content/10.1101/2021.04.01.438090v3) and was prepared by Luca Mazzucato (University of Oregon). It is part of this [forked ssm repo](https://github.com/mazzulab/ssm/blob/master/notebooks/2c%20Input-driven%20linear%20model%20(LM-HMM).ipynb). Part of the code is adapted from [`2 Input Driven HMM`](https://github.com/lindermanlab/ssm/blob/master/notebooks/2%20Input%20Driven%20HMM.ipynb), by Ashwood et al. (2020).  Please ask questions at lmazzuca at uoregon dot edu.*\n",
     "\n",
+    "In order to run this notebook, please install the conda environment [`ssm_conda_mazzu`](https://github.com/mazzulab/AppliedMathNotebooks/blob/main/setup_conda_env_ssm_conda.sh).\n",
+    "\n",
     "Let us start from a simple linear model (LM) where some dependent variables $y_i$ (the observations, $i=1,\\ldots,D=$`obs_dim`) are generated from some dependent variables $x_m$ (the inputs, $m=1,\\ldots,M=$`input_dim`) based on a linear relationship (corresponding to a gaussian multivariante regression) \n",
     "$$\n",
     "y_i=\\sum_{m=1}^M W^{(k)}_{im}x_m+\\mu^{(k)}_i+\\epsilon_i^{(k)}\n",
