--- a/notebooks/2c Input-driven linear model (LM-HMM).ipynb
+++ b/notebooks/2c Input-driven linear model (LM-HMM).ipynb
@@ -1,6 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e492524e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#@title Installing repo and dependencies if using colab (restart Colab Runtime after installing). Skip to imports if running locally.\n",
+    "\n",
+    "!pip install -U matplotlib &> /dev/null\n",
+    "!git clone https://github.com/mazzulab/ssm &> /dev/null\n",
+    "!pip install git+https://github.com/mazzulab/ssm.git &> /dev/null"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "id": "ab898f66-00bf-47f7-80f3-d3c7f5cb5731",
@@ -1401,7 +1415,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.8.13 (default, Mar 28 2022, 06:13:39) \n[Clang 12.0.0 ]"
   }
  },
  "nbformat": 4,
