--- a/notebooks/2c Input-driven linear model (LM-HMM).ipynb
+++ b/notebooks/2c Input-driven linear model (LM-HMM).ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "4b151c8f",
+   "metadata": {},
+   "source": [
+    "<a href=\"https://colab.research.google.com/github/mazzulab/ssm/blob/master/notebooks/2c%20Input-driven%20linear%20model%20(LM-HMM).ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "e492524e",
